syntax = "proto3";

option go_package = "./";

service Auth {
    rpc Register(RegisterRequest) returns (LoginResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
}

message User {
    string email = 1;
    string username = 2;
    string passwordHash = 3;
}